@@ -771,6 +771,8 @@ class TestTemplateFolderListings(IntegrationTestCase):
             'Title',
             'Document Author',
             'Document Date',
+            'Modification Date',
+            'Creation Date',
             'Checked out by',
             'Public Trial',
             'Reference Number',
@@ -789,6 +791,8 @@ class TestTemplateFolderListings(IntegrationTestCase):
             'Title',
             'Document Author',
             'Document Date',
+            'Modification Date',
+            'Creation Date',
             'Checked out by',
             'Public Trial',
             'Reference Number',
@@ -807,6 +811,8 @@ class TestTemplateFolderListings(IntegrationTestCase):
             'Title',
             'Document Author',
             'Document Date',
+            'Modification Date',
+            'Creation Date',
             'Checked out by',
             'Public Trial',
             'Reference Number',
